# 10kv-ai

./: .gitignore  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  REALTIME_OPTIMIZATION_SUMMARY.md  config.env.template  main.py  pyproject.toml  requirements.txt  start_server.py  test_system.py  ui.html
api/: api_doc.md  config.py  llm.py  main.py  mock_llm.py  realtime.py  transcription.py  tts.py
dify_code/: README.MD  tts_api.py
font_end/font_end/: index.html  index.js  main.css
script/: match_keywords.py
tests/: test_mic_ws.py
web-ui/web-vue-demo/: index.html  package-lock.json  package.json
web-ui/web-vue-demo/src/: App.vue
web-ui/web-vue-demo/src/components/: RealtimeVoiceChat.vue
web-ui/web-vue-demo/src/router/: index.js
web-ui/web-vue-demo/src/views/: HomePage.vue  LLMTest.vue  RealtimeChat.vue  TTSTest.vue  TranscribeTest.vue
