[project]
name = "10kv-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio-throttle>=1.0.2",
    "black>=23.10.1",
    "colorama>=0.4.6",
    "fastapi>=0.104.0",
    "flake8>=6.1.0",
    "httpx>=0.25.0",
    "isort>=5.12.0",
    "openai>=1.12.0",
    "prometheus-client>=0.19.0",
    "pydantic-settings>=2.0.3",
    "pydantic[email]>=2.4.2",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "structlog>=23.1.0",
    "typing-extensions>=4.8.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=11.0.3",
]
